SDKs/apideck.com/connector/8.85.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.APIResourceCoverageOneRequest{
        Security: operations.APIResourceCoverageOneSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        PathParams: operations.APIResourceCoverageOnePathParams{
            ID: "sit",
            ResourceID: "voluptas",
        },
        Headers: operations.APIResourceCoverageOneHeaders{
            XApideckAppID: "culpa",
        },
    }
    
    res, err := s.APIResources.APIResourceCoverageOne(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetAPIResourceCoverageResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### API Resources

* `APIResourceCoverageOne` - Get API Resource Coverage
* `APIResourcesOne` - Get API Resource

### APIs

* `ApisAll` - List APIs
* `ApisOne` - Get API

### Connector Docs

* `ConnectorDocsOne` - Get Connector Doc content

### Connector Resources

* `ConnectorResourcesOne` - Get Connector Resource

### Connectors

* `ConnectorsAll` - List Connectors
* `ConnectorsOne` - Get Connector

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
